img too large bug fixed

--- a/game.css
+++ b/game.css
@@ -88,7 +88,7 @@ td {
 }
 
 .helperImg {
-  height: 150px;
+  height: 100%;
 }
 
 .slowlyAppear {
